# daily-event-publisher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  quickstart.py
.github/: README.md
.github/workflows/: pre-commit-validation.yml
src/: event.py  google_calendar_api.py  main.py  telegram_client.py
src/templates/: monthly_events_template.txt
tests/: test_event.py  test_google_calendar_api.py  test_main.py  test_telegram_client.py
